--- a/tools/vagrant/docker-tests/Vagrantfile
+++ b/tools/vagrant/docker-tests/Vagrantfile
@@ -1,18 +1,7 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/bionic64"
+  config.vm.box = "cheretbe/docker-tests"
   config.vm.provider "virtualbox" do |vb|
     vb.customize ["modifyvm", :id, "--groups", "/__vagrant"]
-    vb.customize ["modifyvm", :id, "--uartmode1", "disconnected"]
-    # vb.customize ["sharedfolder", "add", :id, "--name", "ao-env",
-    #   "--hostpath", File.expand_path("../../..", File.dirname(__FILE__)), "--automount"]
   end
   config.vm.synced_folder "../../..", "/ao-env"
-
-  config.vm.provision "ansible_local" do |ansible|
-    ansible.playbook = "provision/provision.yml"
-    ansible.compatibility_mode = "2.0"
-    ansible.extra_vars = {
-      "ansible_python_interpreter": "/usr/bin/python3"
-    }
-  end
 end
